[package]
name = "fib-timetable"
version = "0.1.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
icalendar = { version = "0.16", features = [] }
oauth2 = "4.4.1"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.4", features = ["js", "v4"]} # use same version as `icalendar`
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
